@@ -1,71 +1,67 @@
-import at.skyhanni.sharedvariables.MinecraftVersion
-import at.skyhanni.sharedvariables.MultiVersionStage
 import at.skyhanni.sharedvariables.ProjectTarget
 import at.skyhanni.sharedvariables.SHVersionInfo
-import at.skyhanni.sharedvariables.versionString
-import com.google.devtools.ksp.gradle.KspTaskJvm
-import io.gitlab.arturbosch.detekt.Detekt
-import io.gitlab.arturbosch.detekt.DetektCreateBaselineTask
+import dev.detekt.gradle.Detekt
+import dev.detekt.gradle.DetektCreateBaselineTask
+import dev.kikugie.stonecutter.StonecutterExperimentalAPI
+import net.fabricmc.loom.api.fabricapi.FabricApiExtension
+import net.fabricmc.loom.task.RemapSourcesJarTask
+import net.fabricmc.loom.task.ValidateAccessWidenerTask
 import net.fabricmc.loom.task.prod.ClientProductionRunTask
+import org.gradle.api.provider.Provider
+import org.gradle.api.tasks.testing.logging.TestExceptionFormat
 import org.jetbrains.kotlin.gradle.dsl.JvmTarget
-import org.jetbrains.kotlin.gradle.plugin.SubpluginOption
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 import skyhannibuildsystem.ChangelogVerification
-import skyhannibuildsystem.CleanupMappingFiles
 import skyhannibuildsystem.DownloadBackupRepo
 import skyhannibuildsystem.PublishToModrinth
+import org.gradle.jvm.tasks.Jar as GradleJar
 
 plugins {
     idea
     java
-    id("com.gradleup.shadow") version "8.3.4"
-    id("fabric-loom")
-    id("com.github.SkyHanniStudios.SkyHanni-Preprocessor")
+    alias(libs.plugins.shadow)
+    id("net.fabricmc.fabric-loom")
     kotlin("jvm")
     id("com.google.devtools.ksp")
-    kotlin("plugin.power-assert")
     `maven-publish`
-    id("io.gitlab.arturbosch.detekt")
+    id("dev.detekt")
 }
 
-val target = ProjectTarget.values().find { it.projectPath == project.path }!!
+val target = ProjectTarget.entries.find { it.projectPath == project.path }!!
+val primaryTarget = ProjectTarget.MODERN_26100
+
+fun dependencyNotation(dep: Any): Any = (dep as? Provider<*>)?.get() ?: dep
 
 // Toolchains:
 java {
     toolchain.languageVersion.set(target.minecraftVersion.javaLanguageVersion)
-    // We specifically request ADOPTIUM because if we do not restrict the vendor DCEVM is a
-    // possible candidate. Some DCEVMs are however incompatible with some things gradle is doing,
-    // causing crashes during tests. You can still manually select DCEVM in the Minecraft Client
-    // IntelliJ run configuration.
-    toolchain.vendor.set(JvmVendorSpec.ADOPTIUM)
 }
 val runDirectory = rootProject.file("run")
 runDirectory.mkdirs()
 
 // Minecraft configuration:
-loom {
-    val accessWidenerFile = when (target) {
-        ProjectTarget.MODERN_12105 -> rootProject.file("src/main/resources/skyhanni.accesswidener")
-        else -> file("src/main/resources/skyhanni.accesswidener")
+@OptIn(StonecutterExperimentalAPI::class)
+loom.apply {
+    val classTweakerFile = sc.process(
+        rootProject.file("src/main/resources/skyhanni.classtweaker"),
+        "build/skyhanni.classtweaker",
+    )
+    if (classTweakerFile.exists()) {
+        accessWidenerPath = classTweakerFile
+    } else {
+        println("No classTweaker file for ${target.minecraftVersion}")
     }
-    if (accessWidenerFile.exists()) {
-        accessWidenerPath = accessWidenerFile
-    }
-    @Suppress("UnstableApiUsage")
-    mixin {
-        useLegacyMixinAp.set(true)
-        defaultRefmapName.set("mixins.skyhanni.refmap.json")
-    }
+
+    fabricModJsonPath = rootProject.file("src/main/resources/fabric.mod.json")
+
     runs {
         named("client") {
-            isIdeConfigGenerated = true
-            appendProjectPathToConfigName.set(true)
+            appendProjectPathToDisplayName.set(true)
             this.runDir(rootProject.file("versions/${target.projectName}/run").relativeTo(projectDir).toString())
-            property("mixin.debug", "true")
             if (System.getenv("repo_action") != "true") {
                 property("devauth.configDir", rootProject.file(".devauth").absolutePath)
             }
-            vmArgs("-Xmx4G")
+            vmArgs("-Xmx4G", "-Dnarrator.none=true")
             programArgs("--tweakClass", "at.hannibal2.skyhanni.tweaker.SkyHanniTweaker")
             programArgs("--tweakClass", "io.github.notenoughupdates.moulconfig.tweaker.DevelopmentResourceTweaker")
         }
@@ -77,15 +73,18 @@ val shadowImpl: Configuration by configurations.creating {
     configurations.implementation.get().extendsFrom(this)
 }
 
-val shadowModImpl: Configuration by configurations.creating {
-    configurations.modImplementation.get().extendsFrom(this)
+val shadowOnly: Configuration by configurations.creating
+
+val mixinTestRuntime: Configuration by configurations.creating {
+    isCanBeConsumed = false
+    extendsFrom(configurations.testRuntimeClasspath.get())
 }
 
 val includeBackupRepo by tasks.registering(DownloadBackupRepo::class) {
     this.user = "hannibal002"
     this.repo = "SkyHanni-Repo"
     this.branch = "main"
-    this.resourcePath = "assets/skyhanni/repo.zip"
+    this.resourcePath = "assets/skyhanni/repo.tar.gz"
     this.outputDirectory.set(layout.buildDirectory.dir("downloadedRepo"))
 }
 
@@ -93,109 +92,166 @@ val includeBackupNeuRepo by tasks.registering(DownloadBackupRepo::class) {
     this.user = "NotEnoughUpdates"
     this.repo = "NotEnoughUpdates-Repo"
     this.branch = "master"
-    this.resourcePath = "assets/skyhanni/neu-repo.zip"
+    this.resourcePath = "assets/skyhanni/neu-repo.tar.gz"
     this.outputDirectory.set(layout.buildDirectory.dir("downloadedNeuRepo"))
-}
-
-val cleanupMappingFiles by tasks.registering(CleanupMappingFiles::class) {
-    this.mappingsDirectory.set(layout.projectDirectory.asFile.parentFile)
 }
 
 val publishToModrinth by tasks.registering(PublishToModrinth::class)
 
-tasks.runClient {
-    this.javaLauncher.set(
-        javaToolchains.launcherFor {
-            languageVersion.set(target.minecraftVersion.javaLanguageVersion)
-        },
-    )
+tasks.named<JavaExec>("runClient") {
+    this.javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
 }
 
-tasks.register("checkPrDescription", ChangelogVerification::class) {
-    this.outputDirectory.set(layout.buildDirectory)
-    this.prTitle = project.findProperty("prTitle") as? String ?: ""
-    this.prBody = project.findProperty("prBody") as? String ?: ""
+tasks.register<ClientProductionRunTask>("prodClient") {
+    notCompatibleWithConfigurationCache("Interactive client launches must start a new process every time.")
+    outputs.upToDateWhen { false }
+    runDir = file("run")
+}
+
+if (target == primaryTarget) {
+    tasks.register("checkPrDescription", ChangelogVerification::class) {
+        this.prTitle = System.getenv("PR_TITLE") ?: project.findProperty("prTitle") as? String ?: ""
+        this.prBody = System.getenv("PR_BODY") ?: project.findProperty("prBody") as? String ?: ""
+        this.outputDirectory.set(
+            layout.buildDirectory.dir("changelog-verification")
+        )
+    }
 }
 
 dependencies {
     val versionName = target.minecraftVersion.versionNameOverride ?: target.minecraftVersion.versionName
     minecraft("com.mojang:minecraft:$versionName")
-    if (target.mappingDependency == "official") {
-        mappings(loom.officialMojangMappings())
-    } else {
-        mappings(target.mappingDependency)
-    }
 
-    // Discord RPC client
-    shadowImpl("com.github.caoimhebyrne:KDiscordIPC:0.2.3") {
-        exclude("org.jetbrains.kotlin")
-        exclude("org.jetbrains.kotlinx")
-    }
     compileOnly(libs.jbAnnotations)
     ksp(project(":annotation-processors"))?.let { compileOnly(it) }
 
     ksp(libs.autoservice.ksp)
     implementation(libs.autoservice.annotations)
 
-    target.fabricLoaderVersion?.let { modImplementation(it) }
-    target.fabricApiVersion?.let { modImplementation(it) }
-    modImplementation(libs.fabricLanguageKotlin)
-    target.modMenuVersion?.let { modImplementation("maven.modrinth:modmenu:$it") }
+    target.fabricLoaderVersion?.let {
+        implementation(it)
+        "productionRuntimeMods"(it)
+        mixinTestRuntime("net.fabricmc:fabric-loader-junit:${it.substringAfterLast(':')}")
+    }
+    target.fabricApiVersion?.let {
+        implementation(it)
+        "productionRuntimeMods"(it)
+    }
+    implementation(libs.fabricLanguageKotlin)
+    "productionRuntimeMods"(libs.fabricLanguageKotlin)
 
-    modRuntimeOnly("me.djtheredstoner:DevAuth-fabric:1.2.1")
+    target.modMenuVersion?.let {
+        implementation("maven.modrinth:modmenu:$it")
+    }
+
+    runtimeOnly(libs.devauth)
+    "productionRuntimeMods"(libs.devauth)
 
     val moulconfigVersion = target.minecraftVersion.moulconfigMinecraftVersionOverride ?: target.minecraftVersion.versionName
-    shadowModImpl("org.notenoughupdates.moulconfig:modern-$moulconfigVersion:${libs.versions.moulconfig.get()}")
-    include("org.notenoughupdates.moulconfig:modern-$moulconfigVersion:${libs.versions.moulconfig.get()}")
+    shadowImpl("org.notenoughupdates.moulconfig:modern-$moulconfigVersion:${libs.versions.moulconfig.get()}") {
+        exclude("org.jetbrains.kotlin")
+        exclude("org.jetbrains.kotlinx")
+    }
+    "minecraftTestClientRuntimeLibraries"(
+        "org.notenoughupdates.moulconfig:modern-$moulconfigVersion:${libs.versions.moulconfig.get()}"
+    )
 
-    @Suppress("UnstableApiUsage")
     shadowImpl(libs.libautoupdate) {
         exclude(module = "gson")
     }
+    "minecraftTestClientRuntimeLibraries"(libs.libautoupdate)
 
-    testImplementation("org.junit.jupiter:junit-jupiter:5.11.0")
-    testImplementation("io.mockk:mockk:1.12.5")
+    testImplementation(libs.junit)
+    testRuntimeOnly(libs.junit.launcher)
+    testImplementation(libs.mockk)
+    testImplementation(libs.mockk.agent)
 
-    modImplementation(libs.hypixelmodapi)
-    include(libs.hypixelmodapi.fabric)
+    implementation(target.hypixelModApiVersion)
+    runtimeOnly(target.hypixelModApiFabricVersion)
+    "productionRuntimeMods"(target.hypixelModApiFabricVersion)
 
-
-    modCompileOnly(libs.roughlyenoughitems) {
-        exclude(group = "net.fabricmc.fabric-api")
+    val reiVersion = when (target) {
+        ProjectTarget.MODERN_26100 -> "26.1.819"
     }
-
+    val reiApi = "me.shedaniel:RoughlyEnoughItems-api:$reiVersion"
+    compileOnly(reiApi) { isTransitive = false }
+    "minecraftTestClientRuntimeLibraries"(reiApi) {
+        isTransitive = false
+    }
+    compileOnly(libs.basicMath)
+    "minecraftTestClientRuntimeLibraries"(libs.basicMath)
 
     // getting clock offset
-    shadowImpl("commons-net:commons-net:3.11.1")
+    includeImplementation(libs.commons.net)
+    "minecraftTestClientRuntimeLibraries"(libs.commons.net)
 
-    detektPlugins("org.notenoughupdates:detektrules:1.0.0")
+    // Calculator
+    includeImplementation(libs.keval) {
+        exclude(group = "org.jetbrains.kotlin")
+    }
+    "minecraftTestClientRuntimeLibraries"(libs.keval)
+
+    detektPlugins(libs.detektrules.neu)
     detektPlugins(project(":detekt"))
-    detektPlugins("io.gitlab.arturbosch.detekt:detekt-formatting:1.23.7")
+    detektPlugins(libs.detektrules.ktlint)
+
+    shadowImpl(libs.httpclient)
+    "minecraftTestClientRuntimeLibraries"(libs.httpclient)
+}
+
+fun DependencyHandler.includeImplementation(dep: Any, configure: ExternalModuleDependency.() -> Unit = {}) {
+    add("shadowImpl", dependencyNotation(dep)).also { (it as? ExternalModuleDependency)?.configure() }
 }
 
 afterEvaluate {
     loom.runs.named("client") {
         programArgs("--quickPlayMultiplayer", "hypixel.net")
     }
-    tasks.named("kspKotlin", KspTaskJvm::class) {
-        this.options.add(SubpluginOption("apoption", "skyhanni.modver=$version"))
-        this.options.add(SubpluginOption("apoption", "skyhanni.mcver=${target.minecraftVersion.versionName}"))
-        this.options.add(SubpluginOption("apoption", "skyhanni.buildpaths=${project.file("buildpaths-excluded.txt").absolutePath}"))
+
+    ksp {
+        arg("skyhanni.modver", version.toString())
+        arg("skyhanni.mcver", target.minecraftVersion.versionName)
+        arg("skyhanni.buildpaths", project.file("buildpaths-excluded.txt").absolutePath)
     }
 }
 
-tasks.withType(Test::class) {
+tasks.withType<Test> {
     useJUnitPlatform()
+    testLogging {
+        showStackTraces = true
+        exceptionFormat = TestExceptionFormat.FULL
+    }
     javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
     workingDir(file(runDirectory))
     systemProperty("junit.jupiter.extensions.autodetection.enabled", "true")
+    jvmArgs(
+        "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+        "--add-opens", "java.base/java.util=ALL-UNNAMED",
+        "-XX:+EnableDynamicAgentLoading",
+        // Tests start NPE-ing without this on Java 25
+        "-Dnet.bytebuddy.experimental=true",
+    )
+}
+
+val mixinTest by tasks.registering(Test::class) {
+    description = "Audits mixin application under Fabric Loader."
+    group = "verification"
+    testClassesDirs = sourceSets.test.get().output.classesDirs
+    classpath = sourceSets.test.get().output + sourceSets.main.get().output + mixinTestRuntime
+    filter {
+        includeTestsMatching("at.hannibal2.skyhanni.test.MixinTest")
+    }
+}
+
+tasks.test {
+    dependsOn(mixinTest)
+    exclude("at/hannibal2/skyhanni/test/MixinTest.class")
 }
 
 kotlin {
     sourceSets.all {
         languageSettings {
-            languageVersion = "2.0"
-            enableLanguageFeature("BreakContinueInInlineLambdas")
+            languageVersion = "2.4"
         }
     }
 }
@@ -204,14 +260,26 @@ kotlin {
 tasks.processResources {
     from(includeBackupRepo)
     from(includeBackupNeuRepo)
-    inputs.property("version", version)
+    val fapiVersion = target.fabricApiVersion?.split(":")?.last() ?: ""
+    val hypixelModApiVersion = target.hypixelModApiFabricVersion.split(":").last()
+    val minecraftVersion = target.minecraftVersion.fabricModJsonVersion
+    val props = buildMap {
+        put("version", version)
+        put("minecraft", minecraftVersion)
+        put("fapi", fapiVersion)
+        put("hypixelmodapi", hypixelModApiVersion)
+    }
+
+    props.forEach(inputs::property)
+
     filesMatching("fabric.mod.json") {
-        expand("version" to version)
+        expand(props)
     }
 }
 
-if (target == ProjectTarget.MODERN_12105) {
-    fabricApi {
+@Suppress("UnstableApiUsage")
+if (target == primaryTarget) {
+    configure<FabricApiExtension> {
         configureTests {
             modId = "skyhanni"
             enableGameTests = false // Server game tests
@@ -221,14 +289,13 @@ if (target == ProjectTarget.MODERN_12105) {
     }
     tasks.register("generateRepoPatterns", ClientProductionRunTask::class.java).configure {
         javaLauncher.set(javaToolchains.launcherFor(java.toolchain))
-        dependsOn(tasks.configureLaunch)
+        dependsOn(tasks.named("configureLaunch"))
         val outputFile = project.file("build/regexes/constants.json")
-        mods.from(project.configurations.modImplementation.get())
 
         jvmArgs.add("-DSkyHanniDumpRegex.enabled=true")
         jvmArgs.add("-DSkyHanniDumpRegex=${SHVersionInfo.gitHash}:${outputFile.absolutePath}")
         jvmArgs.add("-Dfabric.client.gametest=true")
-        useXVFB = true
+        useXVFB = System.getProperty("os.name").startsWith("Linux", ignoreCase = true)
     }
     loom.runs.removeIf { it.name == "clientGameTest" }
 }
@@ -249,88 +316,58 @@ excludeBuildPaths(file("buildpaths-excluded.txt"), sourceSets.main)
 excludeBuildPaths(file("buildpaths-excluded.txt"), sourceSets.test)
 
 tasks.withType<KotlinCompile> {
-    compilerOptions.jvmTarget.set(JvmTarget.fromTarget(target.minecraftVersion.formattedJavaLanguageVersion))
+    compilerOptions {
+        val jvmTargetStr = target.minecraftVersion.formattedKotlinJvmTarget
+        jvmTarget.set(JvmTarget.fromTarget(jvmTargetStr))
+        allWarningsAsErrors = true
+        optIn.addAll(
+            "kotlin.concurrent.atomics.ExperimentalAtomicApi",
+            "kotlin.time.ExperimentalTime"
+        )
+        freeCompilerArgs.addAll(
+            // 0 (all cores) triggers a race condition in JvmIrCodegenFactory's parallel codegen on Kotlin 2.4.x,
+            // leaving corrupt .class files that break subsequent incremental builds.
+            // see: https://youtrack.jetbrains.com/issue/KT-85498/
+            "-Xbackend-threads=1",
+            // This is so that workflows logs look cleaner, IntelliJ shows the warnings in the IDE anyway
+            "-Xwarning-level=DEPRECATION:disabled",
+            "-Xintrinsic-const-evaluation",
+            "-Xcontext-sensitive-resolution"
+        )
+    }
 }
 
-if (target.parent == ProjectTarget.MODERN_12105) {
-    val mainRes = project(ProjectTarget.MODERN_12105.projectPath).tasks.getAt("processResources")
-    tasks.named("processResources") {
-        dependsOn(mainRes)
-    }
-    tasks.named("preprocessCode") {
-        dependsOn(mainRes)
-    }
-}
-
-tasks.withType(JavaCompile::class) {
+tasks.withType<JavaCompile> {
     options.encoding = "UTF-8"
 }
 
-tasks.withType(org.gradle.jvm.tasks.Jar::class) {
+tasks.withType<GradleJar> {
     archiveBaseName.set("SkyHanni")
     archiveVersion.set("$version-mc${target.minecraftVersion.versionName}")
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE // Why do we have this here? This only *hides* errors.
-    manifest.attributes.run {
-        this["Main-Class"] = "SkyHanniInstallerFrame"
-    }
-}
-
-val remapJar by tasks.named<net.fabricmc.loom.task.RemapJarTask>("remapJar") {
-    archiveClassifier.set("")
-    dependsOn(tasks.shadowJar)
-    inputFile.set(tasks.shadowJar.get().archiveFile)
-    destinationDirectory.set(rootProject.layout.buildDirectory.dir("libs"))
 }
 
 tasks.shadowJar {
-    destinationDirectory.set(layout.buildDirectory.dir("badjars"))
-    archiveClassifier.set("all-dev")
-    configurations = listOf(shadowImpl, shadowModImpl)
-    doLast {
-        configurations.forEach {
-            println("Config: ${it.files}")
-        }
+    destinationDirectory.set(rootProject.layout.buildDirectory.dir("libs"))
+    archiveClassifier.set("")
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+    configurations = buildList {
+        add(shadowImpl)
+        add(shadowOnly)
     }
     exclude("META-INF/versions/**")
+    exclude("META-INF/*.kotlin_module")
     mergeServiceFiles()
     relocate("io.github.notenoughupdates.moulconfig", "at.hannibal2.skyhanni.deps.moulconfig")
     relocate("moe.nea.libautoupdate", "at.hannibal2.skyhanni.deps.libautoupdate")
-    relocate("com.jagrosh.discordipc", "at.hannibal2.skyhanni.deps.discordipc")
-    relocate("org.apache.commons.net", "at.hannibal2.skyhanni.deps.commons.net")
     relocate("net.hypixel.modapi.tweaker", "at.hannibal2.skyhanni.deps.hypixel.modapi.tweaker")
 }
 tasks.jar {
     archiveClassifier.set("nodeps")
     destinationDirectory.set(layout.buildDirectory.dir("badjars"))
 }
-tasks.assemble.get().dependsOn(tasks.remapJar)
 
-tasks.withType(KotlinCompile::class) {
-    compilerOptions {
-        jvmTarget.set(JvmTarget.fromTarget(target.minecraftVersion.javaLanguageVersion.versionString()))
-    }
-}
-
-if (!MultiVersionStage.activeState.shouldCompile(target)) {
-    tasks.withType<JavaCompile> {
-        onlyIf { false }
-    }
-    tasks.withType<KotlinCompile> {
-        onlyIf { false }
-    }
-    tasks.withType<AbstractArchiveTask> {
-        onlyIf { false }
-    }
-    tasks.withType<ProcessResources> {
-        onlyIf { false }
-    }
-}
-
-preprocess {
-    vars.put("MC", target.minecraftVersion.versionNumber)
-    vars.put("JAVA", target.minecraftVersion.javaVersion)
-    vars.put("TODO", 0)
-}
+tasks.assemble.get().dependsOn(tasks.shadowJar)
 
 val sourcesJar by tasks.registering(Jar::class) {
     destinationDirectory.set(layout.buildDirectory.dir("badjars"))
@@ -340,7 +377,7 @@ val sourcesJar by tasks.registering(Jar::class) {
 
 publishing.publications {
     create<MavenPublication>("maven") {
-        artifact(tasks.remapJar)
+        artifact(tasks.shadowJar)
         artifact(sourcesJar) { classifier = "sources" }
         pom {
             name.set("SkyHanni")
@@ -359,28 +396,70 @@ publishing.publications {
 }
 
 detekt {
-    buildUponDefaultConfig = true // preconfigure defaults
-    config.setFrom(rootProject.layout.projectDirectory.file("detekt/detekt.yml")) // point to your custom config defining rules to run, overwriting default behavior
-    baseline = file(layout.projectDirectory.file("detekt/baseline.xml")) // a way of suppressing issues before introducing detekt
-    source.setFrom(project.sourceSets.named("main").map { it.allSource })
+    buildUponDefaultConfig = true
+    config.setFrom(rootProject.layout.projectDirectory.file("detekt/detekt.yml"))
+    baseline = file(rootProject.layout.projectDirectory.file("detekt/baseline-main.xml"))
+    source.setFrom(project.sourceSets.named("main").map {
+        it.allSource.matching {
+            exclude { elem -> elem.file.absolutePath.replace('\\', '/').contains("/build/generated/") }
+        }
+    })
+}
+
+// Detekt is handled by a dedicated CI workflow; exclude it from the check/build lifecycle
+// so it doesn't slow down normal builds. It still runs when invoked explicitly.
+afterEvaluate {
+    tasks.findByName("check")?.setDependsOn(
+        tasks.getByName("check").dependsOn.filterNot { dep ->
+            (dep is Task && dep.name.startsWith("detekt")) ||
+                (dep is TaskProvider<*> && dep.name.startsWith("detekt"))
+        }
+    )
 }
 
 tasks.withType<Detekt>().configureEach {
-    onlyIf {
-        target == ProjectTarget.MODERN_12105 && project.findProperty("skipDetekt") != "true"
+    source = source.matching {
+        exclude { it.file.absolutePath.replace('\\', '/').contains("/build/generated/") }
     }
-    jvmTarget = target.minecraftVersion.formattedJavaLanguageVersion
-    outputs.cacheIf { false } // Custom rules won't work if cached
+    val isTargetVersion = target == primaryTarget
+    val skipDetekt = project.findProperty("skipDetekt") == "true"
+    onlyIf { isTargetVersion && !skipDetekt }
 
+    val isDetektMain = name == "detektMain"
+    val outputFileName = if (isDetektMain) "main" else "detekt"
+    val detektDir = rootProject.layout.buildDirectory.dir("reports/detekt").get().asFile.absolutePath
     reports {
-        html.required.set(true) // observe findings in your browser with structure and code snippets
-        xml.required.set(true) // checkstyle like format mainly for integrations like Jenkins
-        sarif.required.set(true) // standardized SARIF format (https://sarifweb.azurewebsites.net/) to support integrations with GitHub Code Scanning
-        md.required.set(true) // simple Markdown format
+        html.required.set(true)
+        html.outputLocation.set(file("$detektDir/$outputFileName.html"))
+        sarif.required.set(true)
+        sarif.outputLocation.set(file("$detektDir/$outputFileName.sarif"))
     }
 }
 
 tasks.withType<DetektCreateBaselineTask>().configureEach {
+    val isTargetVersion = target == primaryTarget
     jvmTarget = target.minecraftVersion.formattedJavaLanguageVersion
-    outputs.cacheIf { false } // Custom rules won't work if cached
+    outputs.cacheIf { false }
+    onlyIf { isTargetVersion }
+
+    val isMainBaseline = name == "detektBaselineMain"
+    val outputFileName = if (isMainBaseline) "baseline-main" else "baseline"
+    baseline.set(file(rootProject.layout.projectDirectory.file("detekt/$outputFileName.xml")))
+}
+
+tasks.withType<RemapSourcesJarTask>().configureEach {
+    enabled = false
+}
+
+tasks.matching { it.name == "kspTestKotlin" || it.name == "kspTestJava" }.configureEach {
+    enabled = false
+}
+
+tasks.withType<ValidateAccessWidenerTask>().configureEach {
+    dependsOn("stonecutterPrepare")
+}
+
+repositories {
+    mavenLocal()
+    mavenCentral()
 }
